fix: overflow on various boxes, more user friendly UI

--- a/src/components/CreateItinerary/CreateItinerary.scss
+++ b/src/components/CreateItinerary/CreateItinerary.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     justify-content: center;
     background-color: rgba($color: #000000, $alpha: 0.2);
-    padding: clamp(1rem, 5vw, 15rem) clamp(1rem, 10vw, 15rem);
+    padding: clamp(1rem, 5vw, 3rem) clamp(1rem, 10vw, 15rem);
     z-index: 999;
 }
 
@@ -23,8 +23,8 @@
     flex-direction: column;
     background-color: white;
     padding: 1rem 0;
-    padding-left: clamp(1rem, 2vw, 2rem);
-    padding-right: clamp(1rem, 2vw, 2rem);
+    padding-left: clamp(1.5rem, 5vw, 5rem);
+    padding-right: clamp(1.5rem, 5vw, 5rem);
     border-radius: 5px;
     overflow-y: scroll;
     transition: all 0.3s ease-in-out;
@@ -45,7 +45,7 @@
     
         p {
             margin: 5px;
-            font-size: clamp(0.78rem, 1.5vw, 1.2rem);
+            font-size: clamp(0.6rem, 1.5vw, 1rem);
             text-align: center;
             font-style: italic;
         }
@@ -108,7 +108,6 @@
             padding: 0.5rem;
             border: 1px solid #426abd;
             border-radius: 5px;
-            height: clamp(5rem, 5vw, 10rem);
         }
     }
 
